<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="cn.lenovo.eleccal.ui.activity.MainActivity">-->

    <include layout="@layout/toolbar_normal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_last_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/last_data"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/main_last_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:layout_toRightOf="@id/main_last_data"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignBaseline="@id/main_last_data"
            android:text="0"
            android:inputType="number"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_current_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/main_last_data"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/current_data"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/main_current_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:layout_toRightOf="@id/main_current_data"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignBaseline="@id/main_current_data"
            android:text="0"
            android:inputType="number"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_air_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/main_current_data"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/air_count"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_air_countvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/main_air_count"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignBaseline="@id/main_air_count"
            android:text="0"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_air_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/main_air_count"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/air_fee"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_air_feevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/main_air_fee"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignBaseline="@id/main_air_fee"
            android:text="0"/>

        <!--<android.support.v7.widget.AppCompatTextView-->
            <!--android:id="@+id/main_total_fee"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_below="@id/main_air_fee"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:text="@string/total_fee"/>-->

        <!--<android.support.v7.widget.AppCompatEditText-->
            <!--android:id="@+id/main_total_feevalue"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@id/main_total_fee"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:layout_alignBaseline="@id/main_total_fee"-->
            <!--android:text="0"-->
            <!--android:inputType="number"/>-->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/main_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_air_fee"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/submit"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_should_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_submit"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/should_pay"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_should_payvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="0.0"
            android:textSize="70sp"
            android:layout_alignTop="@+id/main_should_pay"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
